--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
+    "node-fetch": "^3.3.2",
     "playwright": "^1.55.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
